# Vehicle_Parking_App_V1-

./: .env.example  README.md  app.py  pyproject.toml  requirements.txt  testdb.sqlite3
controllers/: admincontorllers.py  usercontrollers.py
models/: database.py  parking_model.py  user_model.py
templates/: adminDashboard.html  adminlogin.html  bookparkingspotuser.html  createparkinglotadmin.html  editparkinglotadmin.html  error.html  login.html  occupiedSpotDetailsAdmin.html  register.html  registereduserslistadmin.html  releaseparkingspotuser.html  summaryadmin.html  summaryuser.html  userDashboard.html  userexits.html  viewspotdetailsadmin.html
